Fixed broken style on safari

--- a/_css/main.scss
+++ b/_css/main.scss
@@ -337,6 +337,7 @@ footer {
       box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.375);
       border-radius: 3px;
       border: 1px solid #d4d4d4;
+      width: 100%;
   }
 
   .project-info {
